--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ h1 {
     background-color: #ffcc00
 }
 
-/* Add a placeholder text color */
 #note-text::placeholder {
     color: #aaa;
 }
@@ -32,8 +31,14 @@ h1 {
     margin: 50px auto;
     display: flex;
     flex-wrap: wrap;
+    overflow:auto;
 }
-
+reload
+{
+    display:flex;
+    flex-wrap:wrap; 
+    justify-content:flex-start;
+}
 .note {
     text-align:center;
     margin-left:0;
@@ -41,7 +46,8 @@ h1 {
     padding: 20px;
     margin: 10px;
     box-shadow: 2px 2px 10px #ccc;
-    width: calc(20%);
+    width: 200px;
+    height: 175px;
 }
 
 h2 {
